# TravAI

./: .gitignore  README.md  nutrition.db  pyproject.toml
chroma_db/: chroma.sqlite3
src/travai/: __init__.py  alembic.ini  hackathon_ciqual_dataset_preparation.ipynb  nutrition.db
src/travai/alembic/: env.py
src/travai/alembic/versions/: 187445375526_initial_migration.py  512282d0e64e_initial_migration.py  807e87852bf4_initial_migration.py  9f771aa1b208_initial_migration.py  a2db1dae391a_initial_migration.py  ac422acee959_initial_migration.py  b9e740207cb5_initial_migration.py
src/travai/app/: ingredients_retrieval.py  run.py  test.json  test.py
src/travai/app/chroma_db/: chroma.sqlite3
src/travai/backend/: database.py  models.py  populate_db.py  utils.py
src/travai/backend/services/: detected_ingredient_service.py  doctor_service.py  goal_service.py  ingredient_service.py  meal_service.py  modified_ingredient_service.py  patient_service.py
src/travai/backend/vector_db/: Table-Ciqual-2020_processed_final.csv  chroma.sqlite3  query.py  vector_database.py
src/travai/backend/vector_db/chroma_db/cc4d8239-2da8-4ace-a38e-ac005ed448d2/: index_metadata.pickle
src/travai/model/: inference.py
src/travai/vector_db/: db.py  query.py  tokenize_dataset.py  vector_database.py  vector_db.py
