[project]
name = "travai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Vienne", email = "raphael.vienne@live.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "sqlalchemy>=2.0.38",
    "sqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
