[project]
name = "travai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Vienne", email = "raphael.vienne@live.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "sqlalchemy>=2.0.38",
    "sqlite",
    "ipykernel>=6.29.5",
    "openai>=1.63.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
