[project]
name = "travai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Vienne", email = "raphael.vienne@live.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "sqlalchemy>=2.0.38",
    "ipykernel>=6.29.5",
    "openai>=1.63.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
    "watchdog>=6.0.0",
    "chromadb>=0.6.3",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
